--- a/server/templates/interface.html
+++ b/server/templates/interface.html
@@ -7,26 +7,11 @@
 
 	<link rel="stylesheet" type="text/css" media="screen" href="static/main.css">
 
-	<script crossorigin src="https://unpkg.com/@daily-co/daily-js"></script>
+	<script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 	<script src="static/js/interface.js" type="module" defer></script>
 </head>
 <body>
 	<h1>CleanSweeper Web Interface</h1>
-	<main>
-		<video id="video-display" autoplay>This browser does not support the video element.</video>
-		<section>
-			<button id="btn-join">Connect</button>
-			<div id="div-status-indicators">
-				<p>
-					<span class="status-indicator-title">Connection: </span>
-					<span id="connection-status-indicator">placeholder</span>
-				</p>
-				<p>
-					<span class="status-indicator-title">Video: </span>
-					<span id="video-status-indicator">placeholder</span>
-				</p>
-			</div>
-		</section>
-	</main>
+	<img id="img-el">
 </body>
 </html>
