camera stream (AI can run on it) 2 routes of streaming (in server.py): 1. webcam [device the server is running on] video stream --> AI [on server] -- image -->  /interface 2. /camera [client camera] -- image --> server (runs AI) -- image --> /interface - fps for 2. is very low (< 5) - fps for 1. is < 10
the AI model in `object_detection_1/` does not really work (it detects a lot of things as obstacles)

the AI code (`object_detector.py`) is based on `TFLite_detection_webcam.py` from https://github.com/EdjeElectronics/TensorFlow-Lite-Object-Detection-on-Android-and-Raspberry-Pi/tree/master

--- a/server/templates/camera.html
+++ b/server/templates/camera.html
@@ -7,26 +7,14 @@
 
 	<link rel="stylesheet" type="text/css" media="screen" href="static/main.css">
 
-	<script crossorigin src="https://unpkg.com/@daily-co/daily-js"></script>
-	<script src="static/js/camera.js" type="module" defer></script>
+	<script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+	<!-- <script src="static/js/camera.js" type="module" defer></script> -->
+	<script src="../static/js/camera.js" defer></script>
 </head>
 <body>
 	<h1>CleanSweeper Camera</h1>
-	<main>
-		<video id="video-display" autoplay>This browser does not support the video element.</video>
-		<section>
-			<button id="btn-stream">Stream</button>
-			<div id="div-status-indicators">
-				<p>
-					<span class="status-indicator-title">Connection: </span>
-					<span id="connection-status-indicator">placeholder</span>
-				</p>
-				<p>
-					<span class="status-indicator-title">Video status: </span>
-					<span id="video-status-indicator">placeholder</span>
-				</p>
-			</div>
-		</section>
-	</main>
+	<video id="video-display" autoplay style="display:none;"></video>
+	<canvas id="canvas-el"></canvas>
+	<button id="btn-stream">Start streaming</button>
 </body>
 </html>
