--- a/server/templates/interface.html
+++ b/server/templates/interface.html
@@ -12,7 +12,13 @@
 </head>
 <body>
 	<h1>CleanSweeper Web Interface</h1>
-	<img id="img-el">
-	<p>FPS: <span id="fps-display"></span></p>
+	<main>
+		<img id="img-el">
+		<section>
+			<p>FPS: <span id="fps-number-display"></span></p>
+			<p>Detections: <span id="detections-number-display"></span>
+
+		</section>
+	</main>
 </body>
 </html>
